<resources>
    <string name="app_name">Chat App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">Or</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="favorites">favorites</string>
    <string name="music">music</string>
    <string name="places">places</string>
    <string name="news">news</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="my_account">My account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_contact_fragment">hello_contact_fragment</string>
    <string name="hello_message_fragment">hello_message_fragment</string>
    <string name="profile">profile</string>
    <string name="search1">search1</string>
</resources>