<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/message"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/contact"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_supervisor_account_24"
        android:title="@string/contact"
        />
    <item
        android:id="@+id/my_account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/my_account" />
</menu>